# pyrevolt

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test.py  tests.py
.circleci/: config.yml
docs/: conf.py
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
pyrevolt/: __init__.py  bot.py  client.py  events.py  exceptions.py  gateway.py  session.py
pyrevolt/structs/: channels.py  invite.py  member.py  server.py  user.py
pyvolt/: __init__.py  client.py  events.py  exceptions.py  gateway.py  session.py
pyvolt/structs/: channels.py  message.py  server.py  user.py
src/pyrevolt/: bot.py  events.py  exceptions.py  gateway.py  session.py
src/pyrevolt/structs/: channels.py  messaging.py  server.py  user.py
src/pyvolt/: __init__.py  bot.py  gateway.py
src/pyvolt/structs/: channels.py  message.py  messaging.py  server.py  user.py
