[metadata]
name = pyrevolt
version = 0.1.0-a
author = Fabio Almeida
author_email = me@fabioalmeida.dev
description = A Python library to wrap the Revolt API, made to be easy-to-use but powerful and feature rich.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GenericNerd/pyrevolt
project_urls = 
    Bug Tracker = https://github.com/GenericNerd/pyrevolt/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
[options.packages.find]
where = src